--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DJDavid98's Overlay</title>
+    <title>WentTheFox's Overlay</title>
     <link rel="stylesheet" href="style.scss">
-    <link rel="icon" href="https://djdavid98.art/favicon.ico">
+    <link rel="icon" href="https://went.tf/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
